<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/cardView"
            android:layout_marginLeft="8dp" android:layout_marginRight="8dp" app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp">

            <TextView
                    android:text="@string/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSearchTitle" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/txtSummonerName"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtSearchTitle"
                    android:hint="@string/search_txtinput_placeholder" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/spnSearchServers" android:layout_marginStart="16dp"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnSearchServers" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSummonerName"
                    android:spinnerMode="dropdown" app:layout_constraintTop_toTopOf="@+id/txtSummonerName"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/search_btn_history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSearchHistory" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtSummonerName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:icon="@drawable/ic_stats_black_24dp" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btnSearchSummary" android:layout_marginEnd="8dp"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/search_btn_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSearchSummary" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtSummonerName"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:icon="@drawable/ic_history_black_24dp"
                    app:layout_constraintStart_toEndOf="@+id/btnSearchHistory"
                    app:layout_constraintHorizontal_bias="0.5" android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="16dp" android:id="@+id/searchLayout">

            <TextView
                    android:text="@string/title_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSearchRecentTitle" android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <ListView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtSearchRecentTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.6" android:layout_marginStart="8dp"
                    android:id="@+id/listSearchRecent" android:layout_marginEnd="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>